--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,26 @@ video {
   box-shadow: none;
   display: block;
 }
+
+@font-face {
+  font-family: "Inter";
+  src: url("/src/assets/fonts/Inter-Regular.woff2") format("woff2");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Inter";
+  src: url("/src/assets/fonts/Inter-Bold.woff2") format("woff2");
+  font-weight: 700;
+  font-style: normal;
+}
+
+@theme {
+  --font-sans: "Inter", system-ui, sans-serif;
+  --font-serif: Georgia, serif;
+}
+
+body {
+  font-family: var(--font-sans)
+}
